Add module exports to fix keyboard navigation